--- a/css/qwiz.css
+++ b/css/qwiz.css
@@ -1,57 +1,258 @@
-body {
-    background: #f06226;
-    color: white;
-    font-family: arial;
-    font-size: 14px;
-  }
-  
-#container {
-    width: 60%;
-    background: #199fdb;
-    margin: 20px auto;
-    overflow: auto;
-    padding: 25px;
-}
-  
-header {
-    text-align: center;
-    border-bottom: #fff dashed 1px;
-}
-  
-header h1,
-header p {
-    margin 0;
-    padding 0;
-}
-  
-header p {
-    margin-top: 5px;
-    color: #000;
-}
-  
-section {
-    min-height: 400px;
-}
-  
-footer {
-    text-align: center;
-}
-  
-input[type="submit"] {
-    background: #f06226;
-    border: 0;
-    color: white;
-    padding: 10px 15px;
-    cursor: pointer;
-}
-  
-#results h3 {
-    background: #f06226;
-    padding: 10px;
-    margin: 10px 0;
+*{
+    position: relative;
+    width: 100vw;
+    height: 80vh;
+    box-sizing: border-box;
+    background: #CAFFA0;
+    font-family:sans-serif;
+    margin:0px;
+    padding: 0px;
+ }
+
+
+body{
+    position: absolute;
+    width: 100vw;
+    height: 50vh;
+    background: #CAFFA0;
+    margin:0px;
+    padding: 0px;  
 }
 
-#results span {
-    color: #000;
-    font-weight: bold; 
+.mainPageTitle{    
+    position: absolute;
+    width: 329px;
+    height: 36px;
+    margin-left: 32px;
+    margin-top: 32px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 36px;
+    color: #383838;
+}
+
+.mainPageText{
+    position: absolute;
+    width: 400px;
+    height: 40px;
+    left: 32px;
+    top: 84px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #383838;
+}
+
+.mainPageGroup {
+    position: absolute;
+    width: 356px;
+    height: 212.62px;
+    left: 42px;
+    top: 205px;
+}
+
+.mainPageGroupRectangle {
+    position: absolute;
+    width: 239.7px;
+    height: 155.2px;
+    left: 70px;
+    top: 100.79px;
+    background: linear-gradient(360deg, #FBFFDE 0%, #BFFF93 100%);
+    transform: skew(10deg);
+    z-index: 11;
+}
+
+.mainPageGroupFree {
+    position: absolute;
+    width: 98px;
+    height: 36px;
+    left: 161px;
+    top: 80.89px;
+    padding: 10px 10px;
+    background: #FFFFFF;
+    color: #383838;
+    border-radius: 34px;
+    transform: rotate(-6.97deg);
+    z-index: 13;
+}
+
+.mainPageGroupSeconds {
+    position: absolute;
+    left:200px;
+    top: 113px;
+    width: 113px;
+    height: 30px;
+    padding: 2px 5px 1px 10px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #383838;
+    transform: rotate(4.62deg);
+    border: 1px solid #383838;
+    border-radius: 34px;
+    z-index: 12;
+}
+
+.mainPageGroupLine{
+    position: absolute;
+    width: 302.49px;
+    height: 1px;
+    left: 83px;
+    top: 254.62px;
+    border: 1.2px solid #383838;
+    z-index: 16;
+}
+
+.mainPageGroupMagnifier {
+
+}
+
+.magnifierStick {
+    position: absolute;
+    width: 1px;
+    height: 26.39px;
+    left: 55px;
+    top: 214px;
+    border: 1.2px solid #383838;
+    transform: skew(-45deg);
+    z-index: 15;
+}
+
+.magnifierLens {
+    position: absolute;
+    width: 73.12px;
+    height: 73.12px;
+    left: 55px;
+    top: 150px;
+    border: 1.2px solid #383838;
+    border-radius: 50px;
+    opacity: .6;
+    z-index: 14;
+}
+
+.mainPageForm{
+    position: relative;
+    display: flex;
+    text-align: center;
+    width: 400px;
+    height: 400px;
+    margin: auto;
+    width: 576px;
+    height: 392px;
+    left: 50px;
+    top: 50px;
+    background: #FFFFFF;
+    border-radius: 24px;
+}
+
+
+.mainPageFormTitleRow {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    width: 450px;
+    height: 10px;
+    top:20px;
+    left: 5px;
+    background: #FFFFFF;
+}
+
+
+.mainPageFormTitle{
+    position: relative;
+    width: 370px;
+    height: 10px;
+    left: 10px;
+    top: 40px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    color: #383838;
+    background: #FFFFFF;
+}
+
+
+
+.mainPageFormTitleStep {
+    position: relative;
+    width: 100px;
+    height: 10px;
+    left: 80px;
+    top: 40px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    color: #383838;
+    background: #FFFFFF;
+}
+
+
+
+
+.mainPageFormRow{
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    width: 500px;
+    height: 200px;
+    gap:10px;
+    background: #FFFFFF;
+    top:100px;
+    left: 35px;
+}
+
+.mainPageFormColumn{
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    height: 200px;
+    background: #FFFFFF;
+    gap:10px;
+}
+
+.mainPageFormItem{
+   
+    position: relative;
+    border: 1.2px solid #383838;
+    border-radius: 15px;
+    left:10px;
+    padding: 10px;
+    width: 230px;
+    height: 50px;
+    display: flex;
+    flex-direction: row;  
+    background: #F5F5F5;
+}
+
+.mainPageFormRadio {
+    position: relative;
+    width: 20px;
+    height: 20px;
+    background: #F5F5F5;
+    padding: 10px;
+}
+
+.mainPageFormText{
+    position: relative;
+    background: #F5F5F5;
+    width: 352px;
+    height: 26px;
+    text-align: left;
+}
+
+.mainPageFormBtn{
+    position: absolute;
+    top: 320px;
+    left:380px;
+    width:150px;
+    height: 45px;
+    background: #383838;
+    border-radius: 12px;
+    color: #FFFFFF;
+    font-size: 16px;
+    padding: 10px  5px;
+    cursor: pointer;
 }
